@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.2.23-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-02-23 09:11:40, took 00:16:44, with 50 workers, on 4284 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2026-02-23 09:53:16, took 00:23:28, with 50 workers, on 4284 cases, 1 failed, 0 traces, 13 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -1174,7 +1174,7 @@ http://sources.freertr.org/cfg/crypt-tls08.tst;crypt-tls08.tst;success;tls with 
 http://sources.freertr.org/cfg/crypt-tls09.tst;crypt-tls09.tst;success;tls with mldsa
 http://sources.freertr.org/cfg/crypt-wireguard01.tst;crypt-wireguard01.tst;success;wireguard over ipv4
 http://sources.freertr.org/cfg/crypt-wireguard02.tst;crypt-wireguard02.tst;success;wireguard over ipv6
-http://sources.freertr.org/cfg/crypt-wireguard03.tst;crypt-wireguard03.tst;success;wireguard over wireguard
+http://sources.freertr.org/cfg/crypt-wireguard03.tst;crypt-wireguard03.tst;#6-run-r1 tping 100 10 3.3.3.2 vrf v1;wireguard over wireguard
 http://sources.freertr.org/cfg/crypt-wireguard04.tst;crypt-wireguard04.tst;success;wireguard over loopback
 http://sources.freertr.org/cfg/crypt-wireguard05.tst;crypt-wireguard05.tst;success;wireguard over asymmetric ports
 http://sources.freertr.org/cfg/demo01.tst;demo01.tst;success;empty demo network
