@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.2.23-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-02-23 09:26:19, took 00:14:11, with 50 workers, on 877 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2026-02-23 10:04:35, took 00:10:50, with 50 workers, on 877 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
