@@ -18079,3 +18079,6 @@ failed: wireguard over asymmetric ports
 ---------------------------------- 2026-02-15 12:32:14 26.2.15
 no failed: wireguard over asymmetric ports
 qc pass: wireguard over asymmetric ports
+---------------------------------- 2026-02-23 09:29:48 26.2.23
+no qc pass: wireguard over wireguard
+failed: wireguard over wireguard
